[gd_scene load_steps=4 format=3 uid="uid://bq5x48hqnvcxg"]

[ext_resource type="Script" uid="uid://c7e4h88cu4ysv" path="res://scripts/demon.gd" id="1_3t42y"]
[ext_resource type="Texture2D" uid="uid://cevmlnoimu4tx" path="res://assets/sprites/demon_sprite.png" id="1_ye80u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t42y"]
size = Vector2(11, 16)

[node name="Demon" type="CharacterBody2D" groups=["Enemies"]]
collision_mask = 3
motion_mode = 1
script = ExtResource("1_3t42y")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_3t42y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ye80u")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(2, 2)
target_position = Vector2(4.5, 0)
collision_mask = 2

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
